--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </nav>
             <img class="logo" src="img/lambda-black.png" alt="Lambda company logo.">
         </header>
-   
+        <img class="home-top-image" src="img/jumbo.jpg" alt="image of a time lapsed highway">
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
