--- a/about.html
+++ b/about.html
@@ -12,16 +12,18 @@
 </head>
 
 <body class="container">
-    <header>
+    <header class="navig">
         <nav>
             <a href="">Home</a>
             <a href="">About</a>
             <a href="">Products</a>
             <a href="">Blog</a>
             <a href="">Contact</a>
+            <img class="logo" src="img/lambda-black.png" alt="Lambda company logo.">
         </nav>
-        <img class="logo" src="img/lambda-black.png" alt="Lambda company logo.">
+        
     </header>
+    <img class="about-top-image" src="img/jumbo-about.png" alt="skyscraper at sunset" >
     <div class="container about-page">
     <section class="top-content">
     <h2>About</h2>
