--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
     </section>
     <section class="strategy">
-      <div>
+      <div class="left">
         <img src="img/about-plan.png" alt="strategy">
 
         <h2>Strategy</h2>
@@ -44,7 +44,7 @@
 
         <button>Learn More</button>
       </div>
-      <div>
+      <div class="right">
         <img src="img/about-working.png" alt="strategy">
 
         <h2>How We Work</h2>
@@ -65,7 +65,7 @@
           proposition.</p>
         <button>Learn More</button>
       </div>
-      <div class=>
+      <div class="right">
       <img src="img/about-meeting.png" alt="strategy">
 
       <h2>Collaboration</h2>
