--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="container">
-  <header class="navig">
+  <header>
     <nav>
       <img class="logo" src="img/lambda-black.png" alt="Lambda company logo.">
       <a href="index.html">Home</a>
@@ -66,15 +66,15 @@
         <button>Learn More</button>
       </div>
       <div class="right">
-      <img src="img/about-meeting.png" alt="strategy">
+        <img src="img/about-meeting.png" alt="strategy">
 
-      <h2>Collaboration</h2>
+        <h2>Collaboration</h2>
 
-      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-        proposition.</p>
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
-      <button>Learn More</button>
-    </div>
+        <button>Learn More</button>
+      </div>
     </section>
     <section class="bot-content">
       <h2>Let's Work Together</h2>
